# project_1_test

./: .flake8  .gitignore  .pylintrc  A1_IMPLEMENTATION_SUMMARY.md  COMPLETE_SOLUTIONS.md  DEFENSIVE_PROGRAMMING_README.md  LEARNING_GUIDE.md  Makefile  README.md  conftest.py  demo_differences.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-optional.txt  verify_setup.py
.github/workflows/: ci.yml  quality.yml
answers/src/: __init__.py  exceptions.py  main.py
answers/src/operations/: __init__.py
answers/tests/: __init__.py  conftest.py  test_cli.py  test_exceptions.py  test_operations.py
complete_solutions/: README.md  main.py
complete_solutions/operations/: __init__.py
docs/: INDEX.md  RECREATE_PROJECT.md  SPRINTS.md
practice/src/: exceptions.py  main.py
practice/src/operations/: __init__.py
practice/tests/: __init__.py  conftest.py  test_cli.py  test_exceptions.py  test_operations.py
resources/examples/: README.md  design_by_contract.py  eafp_vs_lbyl.py  exception_hierarchy.py  guard_clauses.py  input_validation.py  logging_patterns.py
resources/examples/complete_implementation/: main.py
resources/examples/complete_implementation/operations/: __init__.py
resources/guides/: 01-exceptions.md  02-validation.md  03-operations.md  04-cli.md
resources/references/: complete-solutions.md  defensive-checklist.md  eafp-vs-lbyl.md  exception-patterns.md
scripts/: install_hooks.sh  pre_push_check.sh
src/: __init__.py  main.py
src/operations/: __init__.py
tests/: conftest.py  test_lesson_generator.py  test_operations.py
tools/: README_LESSON_GENERATOR.md  grade_from_junit.py  lesson_generator.md  lesson_generator.py
